# llm-finetune

./: .gitignore  Makefile  pyproject.toml
data/dataset/: test.jsonl  train.jsonl  val.jsonl
llm_finetune/: config.py  data.py  sft.py  template_mask.py  utils.py
scirpts/: merge.py  plot_history.py  submit_sft_hpc.sh
templates/: Modelfile
tests/: test_template_mask.py
