[project]
name = "llm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "transformers>=5.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"   

[tool.hatch.build.targets.wheel]
packages = ["llm_finetune"]
