[project]
name = "llm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "jinja2>=3.1.6",
    "peft>=0.19.1",
    "transformers>=5.12.1",
    "trl>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"   

[tool.hatch.build.targets.wheel]
packages = ["llm_finetune"]


[dependency-groups]
plot = [
    "matplotlib>=3.9.0"
]
gguf = [
    "gguf>=0.1.0",
    "sentencepiece>=0.1.98,<0.3.0",
    "protobuf>=4.21.0,<5.0.0",
]
test = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
